@@ -1,3 +1,7 @@
+2011-09-007  Satoshi Konno <skonno@cybergarage.org>
+    * Changed CGUpnpAvServer::searchByBrowse:objectId to search by breadth-first search.
+	* Fixed some warnings on XCode4.
+    
 2010-06-03  Satoshi Konno <skonno@cybergarage.org>
     * Fixed cg_upnpav_dms_new() to set a title into the root node.
 
